# v2ray-maid

./: .gitignore  Cargo.toml  v2ray-maid.json  v2ray.json
src/: main.rs  ping.rs  settings.rs  subscription.rs  utils.rs  v2ray_ctl.rs  v2ray_object.rs  v2ray_template.rs  vlink.rs
