[package]
name = "v2ray-maid"
version = "0.1.0"
authors = ["YISH <mokeyish@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.64"
regex = "1.4.3"
dirs = "3.0.1"
num_cpus = "1.13.0"
uuid = { version = "0.8", features = ["v4"]}